# robotito

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  main.cpp
.github/workflows/: c-cpp.yml  linux-fedora.yml  linux.yml  macos.yml  windows.yml
src/: Makefile.am  display.cpp  display.hpp  game.cpp  game.hpp  keyboard.cpp  keyboard.hpp  main.cpp  position.cpp  position.hpp  robot.cpp  robot.hpp  table.cpp  table.hpp
test/: Makefile.am  macros-test.hpp  position-mock.cpp  position-mock.hpp  position-test.cpp  position-test.hpp  robot-test.cpp  robotito_test  test-runner.cpp
